--- a/pom.xml
+++ b/pom.xml
@@ -35,17 +35,24 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+    			<groupId>org.mariadb.jdbc</groupId>
+    			<artifactId>mariadb-java-client</artifactId>
 		</dependency>
 		<dependency>
     			<groupId>org.projectlombok</groupId>
     			<artifactId>lombok</artifactId>
     			<scope>provided</scope>
 		</dependency>
-
-		
+		<dependency>
+    			<groupId>io.springfox</groupId>
+    			<artifactId>springfox-swagger2</artifactId>
+    			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+    			<groupId>io.springfox</groupId>
+    			<artifactId>springfox-swagger-ui</artifactId>
+    			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
