--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/file_demo?useSSL=false
+spring.datasource.url= jdbc:mariadb://localhost:3306/file_demo?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= test123
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.hibernate.ddl-auto = update
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
