--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
     			<artifactId>springfox-swagger-ui</artifactId>
     			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
