--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
+spring.http.multipart.location= /
+spring.http.multipart.resolve-lazily=false
+
 server.port: 8085
 
 spring.resources.add-mappings = true
