feat: rest api file upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.http.multipart.resolve-lazily=false
 server.port: 8085
 
 spring.resources.add-mappings = true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2/
